--- a/src/index.scss
+++ b/src/index.scss
@@ -21,13 +21,9 @@ a:hover {
     text-decoration: underline;
 }
 
-#root {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    justify-content: space-between;
-}
+// #root {
+//     display: flex;
+//     flex-direction: column;
+    
+//     justify-content: space-between;
+// }
